[gd_scene load_steps=5 format=3 uid="uid://b4jbr6b3671"]

[ext_resource type="Script" uid="uid://b251pyfi5mgtd" path="res://scripts/PrepScreen.gd" id="1_prep"]
[ext_resource type="Script" uid="uid://vwa6kytvlaec" path="res://scripts/CardSlot.gd" id="2_cardslot"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.1, 0.1, 0.1, 0.9)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2"]
bg_color = Color(0.05, 0.05, 0.05, 0.9)

[node name="PrepScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_prep")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopBar" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="WaveLabel" type="Label" parent="VBox/TopBar"]
layout_mode = 2
text = "Wave 1"

[node name="HPLabel" type="Label" parent="VBox/TopBar"]
layout_mode = 2
text = "HP: 20/20"


[node name="LoopStrip" type="Panel" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="LoopContainer" type="HBoxContainer" parent="VBox/LoopStrip"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="slot_0" type="Control" parent="VBox/LoopStrip/LoopContainer"]
custom_minimum_size = Vector2(120, 160)
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_cardslot")

[node name="slot_1" type="Control" parent="VBox/LoopStrip/LoopContainer"]
custom_minimum_size = Vector2(120, 160)
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_cardslot")

[node name="slot_2" type="Control" parent="VBox/LoopStrip/LoopContainer"]
custom_minimum_size = Vector2(120, 160)
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_cardslot")

[node name="slot_3" type="Control" parent="VBox/LoopStrip/LoopContainer"]
custom_minimum_size = Vector2(120, 160)
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_cardslot")

[node name="slot_4" type="Control" parent="VBox/LoopStrip/LoopContainer"]
custom_minimum_size = Vector2(120, 160)
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_cardslot")

[node name="slot_5" type="Control" parent="VBox/LoopStrip/LoopContainer"]
custom_minimum_size = Vector2(120, 160)
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_cardslot")

[node name="slot_6" type="Control" parent="VBox/LoopStrip/LoopContainer"]
custom_minimum_size = Vector2(120, 160)
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_cardslot")

[node name="slot_7" type="Control" parent="VBox/LoopStrip/LoopContainer"]
custom_minimum_size = Vector2(120, 160)
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_cardslot")

[node name="DeckPanel" type="PanelContainer" parent="VBox"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2")

[node name="DeckSlots" type="HBoxContainer" parent="VBox/DeckPanel"]
layout_mode = 2
size_flags_horizontal = 6
alignment = 1

[node name="BottomBar" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="RunButton" type="Button" parent="VBox/BottomBar"]
layout_mode = 2
text = "RUN LOOP"

[node name="RelicBar" type="HBoxContainer" parent="VBox"]
layout_mode = 2
alignment = 1
